WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138756
[iOS] AVKit and MediaPlayer SPI are not available in public SDK
https://bugs.webkit.org/show_bug.cgi?id=138756
Summary
[iOS] AVKit and MediaPlayer SPI are not available in public SDK
Daniel Bates
Reported
2014-11-14 14:09:25 PST
The iOS WebKit port makes use of private header from the AVKit and MediaPlayer frameworks. Towards building the port using the public SDK, we should forward declare the applicable SPI.
Attachments
Patch
(9.42 KB, patch)
2014-11-14 14:15 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(15.89 KB, patch)
2014-11-14 14:45 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2014-11-14 14:15:40 PST
Created
attachment 241623
[details]
Patch
Daniel Bates
Comment 2
2014-11-14 14:45:29 PST
Created
attachment 241627
[details]
Patch Actually add files AVKitSPI.h and MPAVRoutingControllerSPI.h
Daniel Bates
Comment 3
2014-11-17 10:30:09 PST
Comment on
attachment 241627
[details]
Patch Clearing flags on attachment: 241627 Committed
r176206
: <
http://trac.webkit.org/changeset/176206
>
Daniel Bates
Comment 4
2014-11-17 10:30:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug