[iOS] AVKit and MediaPlayer SPI are not available in public SDK https://bugs.webkit.org/show_bug.cgi?id=138756

Reviewed by Eric Carlson.

Source/WebCore:

Add a SPI wrapper headers {AVKit, MPAVRoutingController}SPI.h that forward declares
AVKit and MPAVRoutingController SPI, respectively, and use these header instead of
including private headers of AVKit and MediaPlayer directly.

* WebCore.xcodeproj/project.pbxproj: Add project and private header AVKitSPI.h
and MPAVRoutingControllerSPI.h, respectively.
* platform/audio/ios/MediaSessionManagerIOS.mm: Include header MPAVRoutingControllerSPI.h
instead of including the private header MPAVRoutingController.h.
* platform/ios/WebVideoFullscreenInterfaceAVKit.mm: Include header AVKitSPI.h
instead of including AVKit headers directly.

Source/WebKit2:

Include header MPAVRoutingControllerSPI.h instead of including the
private header MPAVRoutingController.h.

Additionally, sort the list of #import directives.

* UIProcess/ios/forms/WKAirPlayRoutePicker.mm:

Canonical link: https://commits.webkit.org/156645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176206 268f45cc-cd09-0410-ab3c-d52691b4dbfc