Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm
@@ -30,16 +30,11 @@
 
 #import "WebVideoFullscreenInterfaceAVKit.h"
 
+#import "AVKitSPI.h"
 #import "Logging.h"
 #import "GeometryUtilities.h"
 #import "WebVideoFullscreenModel.h"
 #import <AVFoundation/AVTime.h>
-#import <AVKit/AVKit.h>
-#import <AVKit/AVPlayerController.h>
-#import <AVKit/AVPlayerViewController_Private.h>
-#import <AVKit/AVPlayerViewController_WebKitOnly.h>
-#import <AVKit/AVValueTiming.h>
-#import <AVKit/AVVideoLayer.h>
 #import <CoreMedia/CMTime.h>
 #import <UIKit/UIKit.h>
 #import <WebCore/RuntimeApplicationChecksIOS.h>
